Getting back into it..

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 ---
 layout: default
-title: A stunning personal blog Jekyll theme
+title: Welcome
+page_tagline: C# / WPF Developer, and part-time triathlete
 description: Journal is a stunning personal blog Jekyll theme with an image-focused design.
-featured_image: /images/demo/demo-portrait.jpg
+featured_image: /images/toronto.png
 ---
 
 <section class="blog single">
-
 	<div class="wrap">
-
 		{% for post in paginator.posts %}
-
 		<article class="blog-post">
 
 			<div class="blog-post__header">
