--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ featured_image: /images/demo/home.jpg
 
 	<div class="wrap">
 
-		<p class="hero__text">Perhaps you typed the URL incorrectly, or it may have moved.</p>
+		<p class="hero__text">Perhaps you typed the URL incorrectly, or it may have moved. We all make mistakes, no finger pointing.</p>
 		<p><a href="/" class="button button--large">Back To Home</a></p>
 
 	</div>
