--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Welcome
 page_tagline: C# / WPF Developer, and part-time triathlete
 description: Journal is a stunning personal blog Jekyll theme with an image-focused design.
-featured_image: /images/toronto.png
+featured_image: /images/toronto.jpg
 ---
 
 <section class="blog single">
